<?xml version="1.0"?>
<package>
  <name>lidar_background_removal</name>
  <version>0.1.0</version>
  <description>Background removal in (2D or 3D) lidar scan data that coincides with an occupancy grid map.</description>
  
  <author email="zhi.yan@utbm.fr">Zhi Yan</author>
  <maintainer email="zhi.yan@utbm.fr">Zhi Yan</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>
